package grpc.product.dto;

public class ProductDto {
    private Long id;

    private Long clid;

    private Long lotNo;
    
    private String productCd;

    private Long ctgryId;

    private String productName;

    private String productMgtId;

    private String mgtProductName;

    private String publicOpenStartDate;

    private String productModel;

    private String janCd;

    private String isbnCd;

    private String productSpecTitle;

    private String sellStsKbn;

    private Long sellPrice;

    private String sellMethodKbn;

    private String sellInstockExpctDay;

    private String reserveRegstDay;

    private String taxKbn;

    private Long comparisonPrice;

    private String doublePriceTxt;

    private String dlvfeeConfigKbn;

    private Long dlvfee;

    private String buyLimitConfigKbn;

    private Integer maxBuyQuantity;

    private Integer ptMagnification;

    private String pwdLimitConfig;

    private String pwdLimitPageTitle;

    private String pwdLimitPageMsg;

    private Integer timeSaleLockFlg;

    private String timeSaleUnlockExpctDate;

    private Long favoriteSu;

    private Long arrivalReqSu;

    private String exhibitRegstMethodKbn;

    private Integer delFlg;

    private String createDate;

    private String updateDate;

    private Long createId;

    private Long updateId;

    private String createPgmId;

    private String updatePgmId;

    private Long version;

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public Long getClid() {
        return clid;
    }

    public void setClid(Long clid) {
        this.clid = clid;
    }

    public Long getLotNo() {
        return lotNo;
    }

    public void setLotNo(Long lotNo) {
        this.lotNo = lotNo;
    }

    public Long getCtgryId() {
        return ctgryId;
    }

    public void setCtgryId(Long ctgryId) {
        this.ctgryId = ctgryId;
    }

    public String getProductName() {
        return productName;
    }

    public void setProductName(String productName) {
        this.productName = productName;
    }

    public String getProductMgtId() {
        return productMgtId;
    }

    public void setProductMgtId(String productMgtId) {
        this.productMgtId = productMgtId;
    }

    public String getMgtProductName() {
        return mgtProductName;
    }

    public void setMgtProductName(String mgtProductName) {
        this.mgtProductName = mgtProductName;
    }

    public String getPublicOpenStartDate() {
        return publicOpenStartDate;
    }

    public void setPublicOpenStartDate(String publicOpenStartDate) {
        this.publicOpenStartDate = publicOpenStartDate;
    }

    public String getJanCd() {
        return janCd;
    }

    public void setJanCd(String janCd) {
        this.janCd = janCd;
    }

    public String getIsbnCd() {
        return isbnCd;
    }

    public void setIsbnCd(String isbnCd) {
        this.isbnCd = isbnCd;
    }

    public String getProductSpecTitle() {
        return productSpecTitle;
    }

    public void setProductSpecTitle(String productSpecTitle) {
        this.productSpecTitle = productSpecTitle;
    }

    public String getSellStsKbn() {
        return sellStsKbn;
    }

    public void setSellStsKbn(String sellStsKbn) {
        this.sellStsKbn = sellStsKbn;
    }

    public Long getSellPrice() {
        return sellPrice;
    }

    public void setSellPrice(Long sellPrice) {
        this.sellPrice = sellPrice;
    }

    public String getSellMethodKbn() {
        return sellMethodKbn;
    }

    public void setSellMethodKbn(String sellMethodKbn) {
        this.sellMethodKbn = sellMethodKbn;
    }

    public String getSellInstockExpctDay() {
        return sellInstockExpctDay;
    }

    public void setSellInstockExpctDay(String sellInstockExpctDay) {
        this.sellInstockExpctDay = sellInstockExpctDay;
    }

    public String getReserveRegstDay() {
        return reserveRegstDay;
    }

    public void setReserveRegstDay(String reserveRegstDay) {
        this.reserveRegstDay = reserveRegstDay;
    }

    public String getTaxKbn() {
        return taxKbn;
    }

    public void setTaxKbn(String taxKbn) {
        this.taxKbn = taxKbn;
    }

    public Long getComparisonPrice() {
        return comparisonPrice;
    }

    public void setComparisonPrice(Long comparisonPrice) {
        this.comparisonPrice = comparisonPrice;
    }

    public String getDoublePriceTxt() {
        return doublePriceTxt;
    }

    public void setDoublePriceTxt(String doublePriceTxt) {
        this.doublePriceTxt = doublePriceTxt;
    }

    public String getDlvfeeConfigKbn() {
        return dlvfeeConfigKbn;
    }

    public void setDlvfeeConfigKbn(String dlvfeeConfigKbn) {
        this.dlvfeeConfigKbn = dlvfeeConfigKbn;
    }

    public Long getDlvfee() {
        return dlvfee;
    }

    public void setDlvfee(Long dlvfee) {
        this.dlvfee = dlvfee;
    }

    public String getBuyLimitConfigKbn() {
        return buyLimitConfigKbn;
    }

    public void setBuyLimitConfigKbn(String buyLimitConfigKbn) {
        this.buyLimitConfigKbn = buyLimitConfigKbn;
    }

    public Integer getMaxBuyQuantity() {
        return maxBuyQuantity;
    }

    public void setMaxBuyQuantity(Integer maxBuyQuantity) {
        this.maxBuyQuantity = maxBuyQuantity;
    }

    public Integer getPtMagnification() {
        return ptMagnification;
    }

    public void setPtMagnification(Integer ptMagnification) {
        this.ptMagnification = ptMagnification;
    }

    public String getPwdLimitConfig() {
        return pwdLimitConfig;
    }

    public void setPwdLimitConfig(String pwdLimitConfig) {
        this.pwdLimitConfig = pwdLimitConfig;
    }

    public String getPwdLimitPageTitle() {
        return pwdLimitPageTitle;
    }

    public void setPwdLimitPageTitle(String pwdLimitPageTitle) {
        this.pwdLimitPageTitle = pwdLimitPageTitle;
    }

    public Integer getTimeSaleLockFlg() {
        return timeSaleLockFlg;
    }

    public void setTimeSaleLockFlg(Integer timeSaleLockFlg) {
        this.timeSaleLockFlg = timeSaleLockFlg;
    }

    public String getTimeSaleUnlockExpctDate() {
        return timeSaleUnlockExpctDate;
    }

    public void setTimeSaleUnlockExpctDate(String timeSaleUnlockExpctDate) {
        this.timeSaleUnlockExpctDate = timeSaleUnlockExpctDate;
    }

    public Long getFavoriteSu() {
        return favoriteSu;
    }

    public void setFavoriteSu(Long favoriteSu) {
        this.favoriteSu = favoriteSu;
    }

    public Long getArrivalReqSu() {
        return arrivalReqSu;
    }

    public void setArrivalReqSu(Long arrivalReqSu) {
        this.arrivalReqSu = arrivalReqSu;
    }

    public String getExhibitRegstMethodKbn() {
        return exhibitRegstMethodKbn;
    }

    public void setExhibitRegstMethodKbn(String exhibitRegstMethodKbn) {
        this.exhibitRegstMethodKbn = exhibitRegstMethodKbn;
    }

    public Integer getDelFlg() {
        return delFlg;
    }

    public void setDelFlg(Integer delFlg) {
        this.delFlg = delFlg;
    }

    public String getCreateDate() {
        return createDate;
    }

    public void setCreateDate(String createDate) {
        this.createDate = createDate;
    }

    public String getUpdateDate() {
        return updateDate;
    }

    public void setUpdateDate(String updateDate) {
        this.updateDate = updateDate;
    }

    public Long getCreateId() {
        return createId;
    }

    public void setCreateId(Long createId) {
        this.createId = createId;
    }

    public Long getUpdateId() {
        return updateId;
    }

    public void setUpdateId(Long updateId) {
        this.updateId = updateId;
    }

    public String getCreatePgmId() {
        return createPgmId;
    }

    public void setCreatePgmId(String createPgmId) {
        this.createPgmId = createPgmId;
    }

    public String getUpdatePgmId() {
        return updatePgmId;
    }

    public void setUpdatePgmId(String updatePgmId) {
        this.updatePgmId = updatePgmId;
    }

    public Long getVersion() {
        return version;
    }

    public void setVersion(Long version) {
        this.version = version;
    }

    public String getProductCd() {
        return productCd;
    }

    public void setProductCd(String productCd) {
        this.productCd = productCd;
    }

    public String getProductModel() {
        return productModel;
    }

    public void setProductModel(String productModel) {
        this.productModel = productModel;
    }

    public String getPwdLimitPageMsg() {
        return pwdLimitPageMsg;
    }

    public void setPwdLimitPageMsg(String pwdLimitPageMsg) {
        this.pwdLimitPageMsg = pwdLimitPageMsg;
    }
}